--- a/src/containers/team/team.css
+++ b/src/containers/team/team.css
@@ -127,12 +127,12 @@ a:hover {
   font-size: 5rem;
   font-weight: 700;
   margin-bottom: 5px;
-  color: #f1e5e2;
+  color: #FF8A71;
 }
 
 .team-overview p 
 {
-    color: #272429;
+    color: #AE67FA;
 }
 
 .team-overview > a {
